--- a/architecture.html
+++ b/architecture.html
@@ -761,9 +761,9 @@
                       >
                         <p class="detailedAddress">
                           <strong>Eyecatch Architects</strong><br />
-                          Plot No. 710, Flat No. 8-2-293/82/A/710/1, ROAD NO 36,
-                          Jubilee Hills, lane beside US polo Assn, Hyderabad,
-                          Telangana 500033. <br />+91 8125225696<br />contact@eyecatcharchitects.in<br />
+                          Plot No. 710, Road No. 36, Aditya Enclave,
+                          Venkatagiri, Jubilee Hills, Hyderabad, Telangana
+                          500033. <br />+91 8125225696<br />contact@eyecatcharchitects.in<br />
                         </p>
                       </div>
                       <p class="sub-toggle" onclick="toggleAddressVijayawada()">
