--- a/careers.html
+++ b/careers.html
@@ -290,6 +290,60 @@
     </style>
   </head>
   <body>
+    <!-- Preloader -->
+    <div id="preloader">
+      <img src="/images/logo-animation.gif" alt="Loading..." />
+    </div>
+    <style>
+      #preloader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #fff;
+        z-index: 9999;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: opacity 0.6s ease, visibility 0.6s;
+        text-align: center;
+      }
+      #preloader img {
+        width: 60%;
+        height: auto;
+      }
+
+      #preloader.hidden {
+        opacity: 0;
+        visibility: hidden;
+      }
+
+      .mainWrapper {
+        transform: translateY(50px);
+        opacity: 0;
+        transition: transform 0.8s ease, opacity 0.8s ease;
+      }
+
+      .mainWrapper.visible {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    </style>
+    <script>
+      window.addEventListener("load", function () {
+        const preloader = document.getElementById("preloader");
+        const mainWrapper = document.querySelector(".mainWrapper");
+
+        // Match the duration of your logo-animation.gif (e.g., 3000ms)
+        const gifDuration = 3000;
+
+        setTimeout(() => {
+          preloader.classList.add("hidden");
+          mainWrapper.classList.add("visible");
+        }, gifDuration);
+      });
+    </script>
     <div class="mainWrapper" style="position: relative">
       <div class="header">
         <div class="headerContainer">
@@ -369,21 +423,23 @@
           <div class="content">
             <section>
               <p>
-                Our journey began in 1991 when we founded an advertising agency
-                in Vijayawada named EyeCatch. We quickly established ourselves
-                as a leading agency in the fields of advertisement and branding,
-                earning a distinguished reputation in record time. In 2010, we
-                transformed our agency into a private limited company named
-                Medha Aesthetics Pvt. Ltd. Over three decades, we have
-                specialized in branding, architecture, and furniture design,
-                showcasing our innovative approach to visual communication and
-                aesthetics under the guidance of a smart and creative board of
-                directors and top-level leadership. We believe in the power of
-                visual storytelling. We strive to create experiences that
-                captivate target audiences and leave a lasting impression. Our
-                philosophy revolves around innovation, creativity, and attention
-                to detail, ensuring that every project we undertake exceeds
-                expectations.
+                EyeCatch Architects is a distinguished firm in South India,
+                renowned for its excellence and numerous accolades. Among its
+                notable recognitions is the FOAID - Festival of Architecture and
+                Interior Designing 2025, where it earned honors in two
+                categories—Conceptual Architecture and Finalist - Ongoing
+                Interior Design. Additionally, the firm has been recognized as
+                the Trusted and Promising Architecture & Interior Design Firm of
+                the Year 2025, Telangana, and has received the Golden Door Award
+                for Excellence in Consultancy within the Architecture & Interior
+                Design Domain.
+              </p>
+              <p>
+                Since 1995, EyeCatch Architects has believed in the power of
+                visual storytelling—creating experiences that captivate
+                audiences and leave a lasting impact. Our philosophy is rooted
+                in innovation, creativity, and attention to detail, ensuring
+                that every project we undertake exceeds expectations.
               </p>
             </section>
           </div>
@@ -608,9 +664,9 @@
                   >
                     <p class="detailedAddress">
                       <strong>Eyecatch Architects</strong><br />
-                      Plot No. 710, Flat No. 8-2-293/82/A/710/1, ROAD NO 36,
-                      Jubilee Hills, lane beside US polo Assn, Hyderabad,
-                      Telangana 500033. <br />+91 8125225696<br />contact@eyecatcharchitects.in<br />
+                      Plot No. 710, Road No. 36, Aditya Enclave, Venkatagiri,
+                      Jubilee Hills, Hyderabad, Telangana 500033. <br />+91
+                      8125225696<br />contact@eyecatcharchitects.in<br />
                     </p>
                   </div>
                   <p class="sub-toggle" onclick="toggleAddressVijayawada()">
