--- a/news-events.html
+++ b/news-events.html
@@ -360,6 +360,60 @@
     </style>
   </head>
   <body>
+    <!-- Preloader -->
+    <div id="preloader">
+      <img src="/images/logo-animation.gif" alt="Loading..." />
+    </div>
+    <style>
+      #preloader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #fff;
+        z-index: 9999;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: opacity 0.6s ease, visibility 0.6s;
+        text-align: center;
+      }
+      #preloader img {
+        width: 60%;
+        height: auto;
+      }
+
+      #preloader.hidden {
+        opacity: 0;
+        visibility: hidden;
+      }
+
+      .mainWrapper {
+        transform: translateY(50px);
+        opacity: 0;
+        transition: transform 0.8s ease, opacity 0.8s ease;
+      }
+
+      .mainWrapper.visible {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    </style>
+    <script>
+      window.addEventListener("load", function () {
+        const preloader = document.getElementById("preloader");
+        const mainWrapper = document.querySelector(".mainWrapper");
+
+        // Match the duration of your logo-animation.gif (e.g., 3000ms)
+        const gifDuration = 3000;
+
+        setTimeout(() => {
+          preloader.classList.add("hidden");
+          mainWrapper.classList.add("visible");
+        }, gifDuration);
+      });
+    </script>
     <div class="mainWrapper" style="position: relative; padding-bottom: 300px">
       <div class="header">
         <div class="headerContainer">
@@ -847,9 +901,9 @@
                       >
                         <p class="detailedAddress">
                           <strong>Eyecatch Architects</strong><br />
-                          Plot No. 710, Flat No. 8-2-293/82/A/710/1, ROAD NO 36,
-                          Jubilee Hills, lane beside US polo Assn, Hyderabad,
-                          Telangana 500033. <br />+91 8125225696<br />contact@eyecatcharchitects.in<br />
+                          Plot No. 710, Road No. 36, Aditya Enclave,
+                          Venkatagiri, Jubilee Hills, Hyderabad, Telangana
+                          500033. <br />+91 8125225696<br />contact@eyecatcharchitects.in<br />
                         </p>
                       </div>
                       <p class="sub-toggle" onclick="toggleAddressVijayawada()">
