--- a/projects-backup-preload-animation.html
+++ b/projects-backup-preload-animation.html
@@ -409,58 +409,120 @@
     </style>
   </head>
   <body>
-    <!-- Preloader -->
     <div id="preloader">
-      <img src="/images/logo-animation.gif" alt="Loading..." />
+      <div class="preloader-content">
+        <img
+          src="/images/logo-white-bg.jpg"
+          alt="Logo"
+          class="preloader-logo"
+        />
+        <div class="preloader-text">
+          <span>A</span><span>r</span><span>c</span><span>h</span><span>i</span
+          ><span>t</span><span>e</span><span>c</span><span>t</span
+          ><span>s</span>
+        </div>
+      </div>
     </div>
     <style>
       #preloader {
         position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: #fff;
         z-index: 9999;
+        width: 100%;
+        height: 100vh;
+        background: #000;
         display: flex;
-        justify-content: center;
         align-items: center;
-        transition: opacity 0.6s ease, visibility 0.6s;
-        text-align: center;
-      }
-      #preloader img {
-        width: 60%;
-        height: auto;
+        justify-content: center;
+        flex-direction: column;
       }
 
-      #preloader.hidden {
-        opacity: 0;
-        visibility: hidden;
+      .preloader-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .preloader-logo {
+        width: 100px;
+        margin-bottom: 3px;
+      }
+
+      .preloader-text {
+        display: flex;
+        gap: 0px; /* initially no gap */
+        font-family: "Poppins", sans-serif;
+        font-weight: normal;
+        color: #ed1c24;
+        text-transform: uppercase;
+      }
+
+      .preloader-text span {
+        font-size: 14px;
+        opacity: 1;
+      }
+      body.loaded .mainWrapper {
+        transform: translateY(0);
+        opacity: 1;
+        transition: all 0.8s ease;
       }
 
       .mainWrapper {
-        transform: translateY(50px);
+        transform: translateY(40px);
         opacity: 0;
-        transition: transform 0.8s ease, opacity 0.8s ease;
-      }
-
-      .mainWrapper.visible {
-        transform: translateY(0);
-        opacity: 1;
       }
     </style>
     <script>
-      window.addEventListener("load", function () {
+      window.addEventListener("load", () => {
+        const logo = document.querySelector(".preloader-logo");
+        const preloaderText = document.querySelector(".preloader-text");
+        const letters = document.querySelectorAll(".preloader-text span");
         const preloader = document.getElementById("preloader");
-        const mainWrapper = document.querySelector(".mainWrapper");
+        const body = document.body;
 
-        // Match the duration of your logo-animation.gif (e.g., 3000ms)
-        const gifDuration = 3000;
+        const tl = gsap.timeline();
 
-        setTimeout(() => {
-          preloader.classList.add("hidden");
-          mainWrapper.classList.add("visible");
-        }, gifDuration);
+        // 1. Move logo to top-left and fade out
+        tl.to(logo, {
+          x: -window.innerWidth / 2 + 60,
+          y: -window.innerHeight / 2 + 40,
+          scale: 0.5,
+          opacity: 0,
+          duration: 1.2,
+          ease: "power2.inOut",
+        })
+
+          // 2. Text gap increase and letters move up + fade out
+          .to(
+            preloaderText,
+            {
+              gap: "40px",
+              duration: 1.2,
+              ease: "power2.inOut",
+            },
+            "-=1.2"
+          )
+
+          .to(
+            letters,
+            {
+              y: "-=400",
+              opacity: 0,
+              duration: 1.2,
+              ease: "power2.inOut",
+            },
+            "-=1.2"
+          )
+
+          // 3. Slide up the preloader itself
+          .to("#preloader", {
+            y: "-100%",
+            duration: 0.8,
+            ease: "power2.inOut",
+            onComplete: () => {
+              preloader.style.display = "none";
+              body.classList.add("loaded"); // show content with slide up
+            },
+          });
       });
     </script>
 
