--- a/careers.html
+++ b/careers.html
@@ -54,6 +54,7 @@
 
         font-size: 16px;
         line-height: 1.4;
+        overflow-x: hidden;
       }
       h1,
       h2,
@@ -786,7 +787,11 @@
                 Copyright <span class="toggle">+</span>
               </div>
               <div class="sub-content" id="copyrightSection">
-                <p><a href="#">Policy</a></p>
+                <p>
+                  <a href="docs/Privacy Policy-ECArchitects.pdf" target="_blank"
+                    >Policy</a
+                  >
+                </p>
                 <p><a href="#">Terms of Use</a></p>
                 <p><a href="#">Legal Disclaimer</a></p>
               </div>
