--- a/projects.html
+++ b/projects.html
@@ -409,7 +409,7 @@
     </style>
   </head>
   <body>
-    <!-- Preloader -->
+    <!--     
     <div id="preloader">
       <img src="/images/logo-animation.gif" alt="Loading..." />
     </div>
@@ -454,7 +454,7 @@
         const preloader = document.getElementById("preloader");
         const mainWrapper = document.querySelector(".mainWrapper");
 
-        // Match the duration of your logo-animation.gif (e.g., 3000ms)
+       
         const gifDuration = 3000;
 
         setTimeout(() => {
@@ -462,7 +462,7 @@
           mainWrapper.classList.add("visible");
         }, gifDuration);
       });
-    </script>
+    </script> -->
 
     <div class="mainWrapper" style="position: relative">
       <div class="header">
@@ -3408,7 +3408,13 @@
                     Copyright <span class="toggle">+</span>
                   </div>
                   <div class="sub-content" id="copyrightSection">
-                    <p><a href="#">Policy</a></p>
+                    <p>
+                      <a
+                        href="docs/Privacy Policy-ECArchitects.pdf"
+                        target="_blank"
+                        >Policy</a
+                      >
+                    </p>
                     <p><a href="#">Terms of Use</a></p>
                     <p><a href="#">Legal Disclaimer</a></p>
                   </div>
