--- a/projects-backup-preload-animation.html
+++ b/projects-backup-preload-animation.html
@@ -3470,7 +3470,13 @@
                     Copyright <span class="toggle">+</span>
                   </div>
                   <div class="sub-content" id="copyrightSection">
-                    <p><a href="#">Policy</a></p>
+                    <p>
+                      <a
+                        href="docs/Privacy Policy-ECArchitects.pdf"
+                        target="_blank"
+                        >Policy</a
+                      >
+                    </p>
                     <p><a href="#">Terms of Use</a></p>
                     <p><a href="#">Legal Disclaimer</a></p>
                   </div>
