--- a/index.html
+++ b/index.html
@@ -1052,9 +1052,12 @@
                     <h3>Medha Pulipati</h3>
                     <h5>Principal Designer</h5>
                     <div class="socialProfiles">
-                      <span><img src="/images/twitter.svg" /></span>
+                      <span
+                        style="background-color: transparent !important"
+                      ></span>
+                      <!-- <span><img src="/images/twitter.svg" /></span>
                       <span><img src="/images/instagram.svg" /></span>
-                      <span><img src="/images/linkedin.svg" /></span>
+                      <span><img src="/images/linkedin.svg" /></span> -->
                     </div>
                   </div>
                   <p>
