--- a/index.html
+++ b/index.html
@@ -656,6 +656,12 @@
         align-items: center;
         padding-bottom: 60px;
       }
+      #testimonials .swiper-slide {
+        padding-bottom: 10px;
+      }
+      #testimonials .swiper-wrapper {
+        padding-bottom: 10px;
+      }
 
       .swiper-horizontal > .swiper-pagination-bullets,
       .swiper-pagination-bullets.swiper-pagination-horizontal,
@@ -914,10 +920,16 @@
                   <div class="swiper profileSwipe">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide">
-                        <img src="images/pranay-eyecatch-1.jpg" class="" />
+                        <img
+                          src="images/pranay-eyecatch-architects.jpg"
+                          class=""
+                        />
                       </div>
                       <div class="swiper-slide">
                         <img src="images/pranay-award1.jpg" class="" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="images/pranay-foaid-award.jpg" class="" />
                       </div>
                     </div>
                     <div class="swiper-pagination"></div>
@@ -965,7 +977,7 @@
                     Architecture and Interior Designing 2025, where he earned
                     honors in two categories—Conceptual Architecture and
                     Finalist - Ongoing Interior Design. Additionally, he has
-                    been recognized by Bigin Up as the Trusted and Promising
+                    been recognized by Begin Up as the Trusted and Promising
                     Architecture & Interior Designer of the Year 2025,
                     Telangana, and has received the Golden Door Award for
                     Excellence in Consultancy within the Architecture & Interior
@@ -1611,7 +1623,7 @@
                   color: #000;
                 }
               </style>
-              <div class="rowG50 borderBottom">
+              <div class="rowG50 borderBottom" style="border-bottom: 0">
                 <div
                   class="col8 parallax-section"
                   style="border-right: 1px solid #ccc"
