--- a/projects.html
+++ b/projects.html
@@ -62,6 +62,7 @@
 
         font-size: 16px;
         line-height: 1.4;
+        overflow-x: hidden;
       }
       h1,
       h2,
@@ -409,7 +410,6 @@
     </style>
   </head>
   <body>
-    <!--     
     <div id="preloader">
       <img src="/images/logo-animation.gif" alt="Loading..." />
     </div>
@@ -429,7 +429,7 @@
         text-align: center;
       }
       #preloader img {
-        width: 60%;
+        width: 30%;
         height: auto;
       }
 
@@ -454,7 +454,6 @@
         const preloader = document.getElementById("preloader");
         const mainWrapper = document.querySelector(".mainWrapper");
 
-       
         const gifDuration = 3000;
 
         setTimeout(() => {
@@ -462,7 +461,7 @@
           mainWrapper.classList.add("visible");
         }, gifDuration);
       });
-    </script> -->
+    </script>
 
     <div class="mainWrapper" style="position: relative">
       <div class="header">
